--- a/article2.html
+++ b/article2.html
@@ -20,8 +20,8 @@
         </h1>
         <p>
           La marque connue pour sa gamme de voitures et de batteries électriques
-          innovantes se propulsent dans le futur. Elon Musk, qui est toujours à
-          la recherche de nouvelle technologique, met un pied sur le marché
+          innovantes se propulse dans le futur. Elon Musk, qui est toujours à la
+          recherche de nouvelles technologies, met un pied sur le marché
           maritime.
         </p>
         <p>
@@ -33,45 +33,41 @@
           /></a>
         </p>
         <p>
-          Tesla avait habitué ses fans à des véhicules aux designs ambitieux,
-          une technologie à la pointe du futurisme. Dans un format minimaliste,
-          des couleurs épurées et futuriste. Elon Musk nous emporte cette
-          fois-ci dans une nouvelle-ère. Effectivement, le constructeur est allé
-          bien plus loin dans l'originalité, et brusque les codes
-          éthiques. C’est sur son compte Twitter que le PDG annonce en
-          exclusivité le premier bateau Tesla, Arch-e-mede, grand plein dans la
-          splendeur. Cette révélation fait des heureux, en lançant enfin sa
-          série de bateau électrique, tant attendu des téléspectateurs, fans,
-          consommateurs. Tesla entre dans le marché des bateaux, en se
-          démarquant des autres concurrents, puisqu’elle est électrique.
+          Tesla avait habitué ses fans à des véhicules au design ambitieux avec
+          une technologie à la pointe du futurisme. Elon Musk nous emporte cette
+          fois-ci dans une nouvelle ère. Effectivement, le constructeur est allé
+          bien plus loin dans l'originalité. C’est sur son compte Twitter que le
+          PDG annonce en exclusivité le premier bateau Tesla, Arch-e-mede. Cette
+          révélation fait des heureux, en lançant enfin sa série de bateau
+          électrique, tant attendu les fans . Tesla entre dans le marché des
+          bateaux de plaisance, en se démarquant des autres concurrents, avec
+          une offre exclusivement électrique.
         </p>
 
         <h3>
           À la pointe du futurisme.
         </h3>
         <p>
-          Elon Musk connus pour un design grandement minimaliste, des couleurs
-          épeurés, une touche de modernité. Vous ne serez pas déçu ! Le bateau
-          sera une grandiose concrétisation avec un côté minimaliste, luxueuse
-          et moderne. Tesla ne s’arrête pas que sur l’aspect. Il met en avant
-          les différentes options et caractéristiques d'Arch-e-mède.  Pour le
-          départ d’un bateau, cette nouveauté comportera une protection contre
-          les chocs latéraux, à l’avant et à l’arrière.  Cette structure très
+          Elon Musk connu pour un ses designs minimalistes, ses couleurs épurés
+          et ses équipements high-tech. Vous ne serez pas déçu ! Le bateau sera
+          une grandiose concrétisation avec un côté minimaliste, luxueuse et
+          moderne. Tesla ne s’arrête pas que sur l’aspect. Il met en avant les
+          différentes options et caractéristiques d'Arch-e-mede.  Pour le départ
+          d’un bateau, cette nouveauté comportera une protection contre les
+          chocs latéraux, à l’avant et à l’arrière.  Cette structure très
           résistance dans laquelle la batterie est intégrée au plancher pour une
-          protection exceptionnelle. Ce modèle est conçu pour assuré une
-          sécurité de 100 % grâce à une architecture électrique pour réduire
-          considérablement le risque de retournement ou de choc. De plus la
-          recharge auto-pratique expose une utilisation
-          modernisant, Arch-e-mède met en place une grande roue pro-pulsants qui
-          tourbillonne pour transmettre de l’énergie hydraulique, cette énergie
-          sera stocké dans un compartiment, pour une utilisation
-          optimale. L’auto-pilotage sera intégré dans le bateau ce qui permettra
-          de laisser l’intelligence artificielle prendre le contrôle durant
-          l’intégralité d’un parcours avec supervision du chauffeur. Cette
-          utilisation peut être contrôlée à distance et optimisée par un service
-          d’assistance Tesla. Les nouvelles caractérisations de cette nouveauté
-          donnent une perception idéal à l’avenir prometteur du bateau
-          électrique.
+          protection exceptionnelle. Ce modèle est conçu pour assurer une
+          sécurité à 100 % grâce à une architecture électrique et pour réduire
+          considérablement le risque de retournement ou de choc. La recharge
+          auto-pratique expose une utilisation moderne, Arch-e-mède met en place
+          une grande roue pro-pulsants qui tourbillonne pour transmettre de
+          l’énergie hydraulique, cette énergie sera stocké dans un compartiment,
+          pour une utilisation optimale. L’auto-pilotage sera intégré dans le
+          bateau ce qui permettra à l’intelligence artificielle de prendre le
+          contrôle durant l’intégralité d’un parcours. Cette utilisation peut
+          être contrôlée à distance et optimisée par un service d’assistance
+          Tesla. Avec ses nouvelles caractéristiques le bateau électrique Tesla
+          est promis à un bel avenir.
         </p>
         <h3>Une importante rentabilisation.</h3>
         <div class="div-elon">
@@ -84,26 +80,21 @@
         </div>
         <p>
           Le marché du bateau prend un nouveau tournant : l’Arch-e-mede devient
-          un produit far des produits Tesla. Effectivement, en activant l’option
-          de recharge pratique : le voyage est sans limite. Ce dispositif
-          rentabilise considérablement le marché maritime, plus particulièrement
-          les entreprises telles que Click & Boat. Cette plateforme, qui permet
-          de mettre en location son bateau, devient de plus en plus
-          fleurissante. L’initiative Arch-e-mede ouvre une importante
-          rentabilisation, les prix sont élevé, certes, mais le milieu
-          économique et touristique est touché par cette avancée fulgurante. De
-          plus, l’auto-pilotage des bateaux œuvre à des projets futurs, comme le
-          service taxi-boat dans lequel Tesla mène un partenariat pour cette
-          idée innovateur. Elon recherche même à perfectionner
-          l’Arch-e-mède 2.0. Un service « taxi » prometteur qui permettrait au
-          utilisateur de se déplacer par la mer. Il cherche à optimiser la
-          puissance du moteur tout en restant dans une batterie électrique voir
-          hydraulique.
+          un produit phare de Tesla. Effectivement, le voyage est sans
+          limite. Ce dispositif rentabilise considérablement l'investissement,
+          plus particulièrement les entreprises telles que Click & Boat. Cette
+          plateforme, qui permet de mettre en location son bateau, devient de
+          plus en plus florissante. L’initiative Arch-e-mede ouvre une
+          importante rentabilisation, les prix sont élevés, certes, mais le
+          milieu économique et touristique profite de cette avancée
+          fulgurante. Par ailleurs, l’auto-pilotage des bateaux œuvre à des
+          projets futurs, comme le service taxi-boat dans lequel Tesla mène un
+          partenariat novateur.
         </p>
         <p>
-          Selon les spécialistes, le chiffre d’affaire augmenterait de plus de
-          20 %. Elon Musk annonce que Tesla a reçu près de 200.000 reservations
-          en ligne pour son nouveau modele.
+          Selon les spécialistes, le chiffre d’affaire de Tesla augmenterait de
+          plus de 20 %. Elon Musk annonce que la marque a déja reçu près de
+          200.000 reservations en ligne pour son nouveau modele.
         </p>
         <p>
           <a class="archi" href="img/zboatcrop.jpg"
@@ -113,7 +104,7 @@
               title="Cliquez pour agrandir"
           /></a>
         </p>
-        <h3>Les Chiffres parlent d'eux meme</h3>
+        <h3>Les Chiffres parlent d'eux-mêmes</h3>
         <p>
           17% ont pris la version à $98.990
         </p>
@@ -123,13 +114,11 @@
         <p>
           42% ont pris la version à $299.999
         </p>
-        <h3>Une nouvelle-ere</h3>
+        <h3>Une nouvelle-ère</h3>
 
         <p>
-          La revolution commence au moment ou le service "taxi-boat" est mis en
-          place. Cette innovation chamboulera toute la societe. Nous avançons
-          dans une nouvelle phase dans lequel le bénéfique de cette
-          rentabilisation augmentera.
+          La révolution commence au moment où le service "taxi-boat" est mis en
+          place. Cette innovation chamboule toute la société.
         </p>
         <p class="auteurs">Par Edith Uber & Max Click</p>
       </section>
