--- a/index.html
+++ b/index.html
@@ -82,17 +82,13 @@
     <section class="techno" id="techno">
       <div class="techno-wrapper">
         <div class="techno-image">
-
           <img class="techno-image-content" src="img/solaire.png" alt="" />
         </div>
         <p class="techno-text">
-          Malgré son apparence, Arch-e-mede est bien composé de panneau solaire
-
-          placé à l’avant du bateau sous une couche de pe inture. Ces panneau
-          solaire permettent la production d’énergie inépuisable et non
-          polluante. L’électricité produite est en priorité utilisée pour
-          alimenter le moteur.
-
+          Malgré son apparence, Arch-e-mede est bien composé de panneaux
+          solaires placés à l’avant du bateau sous une couche de peinture. Ces
+          panneaux solaires permettent la production d’énergie inépuisable et
+          non polluante.
         </p>
       </div>
       <div class="techno-wrapper">
@@ -104,13 +100,11 @@
           />
         </div>
         <p class="techno-text">
-          Arch-e-mede est doté de la dernière version d’autopilotage. Elle
+          Arch-e-mede est doté de la dernière version d’autopilotage Tesla. Elle
           combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
-
-          satellite et un sonar, vous offrant ainsi une sécurité optimale. Le
-          contrôle à distance du Arch-e-mede est disponible par smartphone via
-
-          l’application Tesla.
+          satellite et un sonar, pour une sécurité optimale. Le contrôle à
+          distance d'Arch-e-mede est disponible par smartphone via l’application
+          Tesla.
         </p>
       </div>
       <div class="techno-wrapper">
@@ -119,10 +113,9 @@
         </div>
         <p class="techno-text">
           La véritable innovation de ce bateau se cache sous sa coque.
-
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
-          de l'énergie et par conséquent de recharger ses batteries au grès de
-          la navigation et des courants.
+          de l'énergie même à l'arrêt, et par conséquent de recharger les
+          batteries au gré de la navigation et des courants.
         </p>
       </div>
     </section>
@@ -223,7 +216,7 @@
           </div>
 
           <div class="color-choice">
-            <h2>Couleurs aux choix</h2>
+            <h2>Couleur au choix</h2>
             <ul class="colors">
               <li class="color-li is-selected">
                 <img class="color-sample " src="img/colors/color-black.png" />
