--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
     <section class="techno" id="techno">
       <div class="techno-wrapper">
         <div class="techno-image">
-
           <img class="techno-image-content" src="img/solaire.png" alt="" />
         </div>
         <p class="techno-text">
@@ -116,66 +115,68 @@
         </div>
         <p class="techno-text">
           La véritable innovation de ce bateau se cache sous sa coque.
-
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
           de l'énergie et par conséquent de recharger ses batteries au grès de
           la navigation et des courants.
         </p>
       </div>
     </section>
-    <div class="technique">
-      <div class="ficheTech">
-        <h2 class="technique-title">Fiche technique</h2>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Longueur hors tout</div>
-          <div class="technique-title-number">6,64m</div>
+    <section class="section-technique">
+      <div class="technique">
+        <div class="ficheTech">
+          <h2 class="technique-title">Fiche technique</h2>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Longueur hors tout</div>
+            <div class="technique-title-number">6,64m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Longueur de coque</div>
+            <div class="technique-title-number">6,23m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Longueur de flotaison</div>
+            <div class="technique-title-number">6,16m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">largeur maxi</div>
+            <div class="technique-title-number">2,55m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Tirant d'eau</div>
+            <div class="technique-title-number">1,60m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">
+              Diamètre maxi des flotteurs
+            </div>
+            <div class="technique-title-number">6,15m</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Puissance maxi</div>
+            <div class="technique-title-number">400 Chv</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Puissance mini</div>
+            <div class="technique-title-number">200 Chv</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Puissance intermediaire</div>
+            <div class="technique-title-number">320 Chv</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Poids sans moteur</div>
+            <div class="technique-title-number">644 kg</div>
+          </div>
+          <div class="technique-flexbox">
+            <div class="technique-title-caract">Garantie</div>
+            <div class="technique-title-number">5 ans</div>
+          </div>
         </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Longueur de coque</div>
-          <div class="technique-title-number">6,23m</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Longueur de flotaison</div>
-          <div class="technique-title-number">6,16m</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">largeur maxi</div>
-          <div class="technique-title-number">2,55m</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Tirant d'eau</div>
-          <div class="technique-title-number">1,60m</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Diamètre maxi des flotteurs</div>
-          <div class="technique-title-number">6,15m</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Puissance maxi</div>
-          <div class="technique-title-number">400 Chv</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Puissance mini</div>
-          <div class="technique-title-number">200 Chv</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Puissance intermediaire</div>
-          <div class="technique-title-number">320 Chv</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Poids sans moteur</div>
-          <div class="technique-title-number">644 kg</div>
-        </div>
-        <div class="technique-flexbox">
-          <div class="technique-title-caract">Garantie</div>
-          <div class="technique-title-number">5 ans</div>
+        <div class="technique-flexbox-img">
+          <img class="tech-flex-img" src="./img/3d boat.png" alt="" />
         </div>
       </div>
-      <div class="technique-flexbox-img">
-        <img class="tech-flex-img" src="./img/3d boat.png" alt="" />
-      </div>
-    </div>
-    <hr class="separation" />
+    </section>
     <section class="form-section" id="order">
       <div class="form-overlay">
         <p class="alert-ok">
@@ -295,10 +296,7 @@
         <span class="prec">< Préc</span>
         <div class="article-here">
           <div class="article-presentation-content">
-            <img
-              class="article-presentation-image"
-              src="img/porteConteneur.jpg"
-            />
+            <img class="article-presentation-image" src="img/cargo.jpg" />
 
             <span class="article-head">Fret maritime et pollution</span>
             <span class="article-description"
@@ -312,7 +310,10 @@
         </div>
         <div class="article-here is-hidden">
           <div class="article-presentation-content">
-            <img class="article-presentation-image" src="img/tesla-boat.jpg" />
+            <img
+              class="article-presentation-image"
+              src="img/article2-presentation.jpg"
+            />
 
             <span class="article-head">Tesla innove en haute mer</span>
             <span class="article-description"
