--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <a class="lien-menu" href="#techno">Technologie</a>
             </li>
             <li class="menu-items">
-              <a class="lien-menu" href="#order">Commandez</a>
+              <a class="lien-menu" href="#order">Commander</a>
             </li>
             <li class="menu-items">
-              <a class="lien-menu" href="#">Actualités</a>
+              <a class="lien-menu" href="#article">Actualités</a>
             </li>
           </ul>
           <div id="open-menu" class="open-menu open-close">
@@ -289,7 +289,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="article">
       <div class="article-presentation-conteneur">
         <span class="article-news">NEWS</span>
         <span class="suiv">suiv ></span>
@@ -351,17 +351,23 @@
         </li>
       </ul>
       <div class="footerbox">
-        <a href="https://www.instagram.com/teslamotors/?hl=fr">
-          <img class="footerlogo" src="img/logoinsta.png" alt=""
+        <a
+          class="footerlogo"
+          href="https://www.instagram.com/teslamotors/?hl=fr"
+        >
+          <img src="img/logoinsta.png" alt=""
         /></a>
-        <a href="https://twitter.com/tesla?lang=fr"
-          ><img class="footerlogo" src="img/logotwitter.png" alt=""
+        <a class="footerlogo" href="https://twitter.com/tesla?lang=fr"
+          ><img src="img/logotwitter.png" alt=""
         /></a>
-        <a href="https://www.facebook.com/TeslaMoto/"
-          ><img class="footerlogo" src="img/logofb.png" alt=""
+        <a class="footerlogo" href="https://www.facebook.com/TeslaMoto/"
+          ><img src="img/logofb.png" alt=""
         /></a>
-        <a href="https://www.youtube.com/channel/UC5WjFrtBdufl6CZojX3D8dQ">
-          <img class="footerlogo" src="img/logoytb.png" alt="" />
+        <a
+          class="footerlogo"
+          href="https://www.youtube.com/channel/UC5WjFrtBdufl6CZojX3D8dQ"
+        >
+          <img src="img/logoytb.png" alt="" />
         </a>
       </div>
     </footer>
