rework article 2 page

--- a/article2.html
+++ b/article2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,142 +9,147 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/article2.css" />
+    <link rel="stylesheet" href="css/article2.css" />
     <title>Article 2</title>
   </head>
+
   <body>
-    <article>
-      <section>
-        <h1>
+    <section class="article2">
+      <div class="article2-contenu">
+        <h1 class="article2-title">
           Tesla ne cesse d’innover
         </h1>
-        <p>
-          La marque connue pour sa gamme de voitures et de batteries électriques
-          innovantes se propulse dans le futur. Elon Musk, qui est toujours à la
-          recherche de nouvelles technologies, met un pied sur le marché
-          maritime.
-        </p>
-        <p>
-          <a class="archi-crique" href="img/boat-3.jpg"
+        <div class="article2-wrapper">
+          <p>
+            La marque connue pour sa gamme de voitures et de batteries
+            électriques innovantes se propulse dans le futur. Elon Musk, qui est
+            toujours à la recherche de nouvelles technologies, met un pied sur
+            le marché maritime.
+            Tesla avait habitué ses fans à des véhicules au design ambitieux
+            avec une technologie à la pointe du futurisme. Elon Musk nous
+            emporte cette fois-ci dans une nouvelle ère. Effectivement, le
+            constructeur est allé bien plus loin dans l'originalité. C’est sur
+            son compte Twitter que le PDG annonce en exclusivité le premier
+            bateau Tesla, Arch-e-mede. Cette révélation fait des heureux, en
+            lançant enfin sa série de bateau électrique, tant attendu les fans
+            . Tesla entre dans le marché des bateaux de plaisance, en se
+            démarquant des autres concurrents, avec une offre exclusivement
+            électrique.
+          </p>
+          <a  href="img/boat-3.jpg"
             ><img
+              class="article2-image-content"
               src="img/archi-crique-mini.jpg"
               alt="L'Arch-e-mede"
               title="Cliquez pour agrandir"
           /></a>
-        </p>
-        <p>
-          Tesla avait habitué ses fans à des véhicules au design ambitieux avec
-          une technologie à la pointe du futurisme. Elon Musk nous emporte cette
-          fois-ci dans une nouvelle ère. Effectivement, le constructeur est allé
-          bien plus loin dans l'originalité. C’est sur son compte Twitter que le
-          PDG annonce en exclusivité le premier bateau Tesla, Arch-e-mede. Cette
-          révélation fait des heureux, en lançant enfin sa série de bateau
-          électrique, tant attendu les fans . Tesla entre dans le marché des
-          bateaux de plaisance, en se démarquant des autres concurrents, avec
-          une offre exclusivement électrique.
-        </p>
-
-        <h3>
+        </div>
+        <h3 class="article2-secondary-title">
           À la pointe du futurisme.
         </h3>
-        <p>
-          Elon Musk connu pour un ses designs minimalistes, ses couleurs épurés
-          et ses équipements high-tech. Vous ne serez pas déçu ! Le bateau sera
-          une grandiose concrétisation avec un côté minimaliste, luxueuse et
-          moderne. Tesla ne s’arrête pas que sur l’aspect. Il met en avant les
-          différentes options et caractéristiques d'Arch-e-mede.  Pour le départ
-          d’un bateau, cette nouveauté comportera une protection contre les
-          chocs latéraux, à l’avant et à l’arrière.  Cette structure très
-          résistance dans laquelle la batterie est intégrée au plancher pour une
-          protection exceptionnelle. Ce modèle est conçu pour assurer une
-          sécurité à 100 % grâce à une architecture électrique et pour réduire
-          considérablement le risque de retournement ou de choc. La recharge
-          auto-pratique expose une utilisation moderne, Arch-e-mède met en place
-          une grande roue pro-pulsants qui tourbillonne pour transmettre de
-          l’énergie hydraulique, cette énergie sera stocké dans un compartiment,
-          pour une utilisation optimale. L’auto-pilotage sera intégré dans le
-          bateau ce qui permettra à l’intelligence artificielle de prendre le
-          contrôle durant l’intégralité d’un parcours. Cette utilisation peut
-          être contrôlée à distance et optimisée par un service d’assistance
-          Tesla. Avec ses nouvelles caractéristiques le bateau électrique Tesla
-          est promis à un bel avenir.
-        </p>
-        <h3>Une importante rentabilisation.</h3>
-        <div class="div-elon">
-          <a class="elon" href="img/elon.jpg"
+        <div class="article2-wrapper">
+          <p>
+            Elon Musk connu pour un ses designs minimalistes, ses couleurs
+            épurés et ses équipements high-tech. Vous ne serez pas déçu ! Le
+            bateau sera une grandiose concrétisation avec un côté minimaliste,
+            luxueuse et moderne. Tesla ne s’arrête pas que sur l’aspect. Il met
+            en avant les différentes options et caractéristiques d'Arch-e-mede. 
+            Pour le départ d’un bateau, cette nouveauté comportera une
+            protection contre les chocs latéraux, à l’avant et à l’arrière. 
+            Cette structure très résistance dans laquelle la batterie est
+            intégrée au plancher pour une protection exceptionnelle. Ce modèle
+            est conçu pour assurer une sécurité à 100 % grâce à une architecture
+            électrique et pour réduire considérablement le risque de
+            retournement ou de choc. La recharge auto-pratique expose une
+            utilisation moderne, Arch-e-mède met en place une grande roue
+            pro-pulsants qui tourbillonne pour transmettre de l’énergie
+            hydraulique, cette énergie sera stocké dans un compartiment, pour
+            une utilisation optimale. L’auto-pilotage sera intégré dans le
+            bateau ce qui permettra à l’intelligence artificielle de prendre le
+            contrôle durant l’intégralité d’un parcours. Cette utilisation peut
+            être contrôlée à distance et optimisée par un service d’assistance
+            Tesla. Avec ses nouvelles caractéristiques le bateau électrique
+            Tesla est promis à un bel avenir.
+          </p>
+          <a href="img/elon.jpg"
             ><img
+              class="article2-image-content" 
               src="img/elon-mini2.jpg"
               alt="Elon Musk"
               title="Cliquez pour agrandir"
           /></a>
         </div>
-        <p>
-          Le marché du bateau prend un nouveau tournant : l’Arch-e-mede devient
-          un produit phare de Tesla. Effectivement, le voyage est sans
-          limite. Ce dispositif rentabilise considérablement l'investissement,
-          plus particulièrement les entreprises telles que Click & Boat. Cette
-          plateforme, qui permet de mettre en location son bateau, devient de
-          plus en plus florissante. L’initiative Arch-e-mede ouvre une
-          importante rentabilisation, les prix sont élevés, certes, mais le
-          milieu économique et touristique profite de cette avancée
-          fulgurante. Par ailleurs, l’auto-pilotage des bateaux œuvre à des
-          projets futurs, comme le service taxi-boat dans lequel Tesla mène un
-          partenariat novateur.
-        </p>
-        <p>
-          Selon les spécialistes, le chiffre d’affaire de Tesla augmenterait de
-          plus de 20 %. Elon Musk annonce que la marque a déja reçu près de
-          200.000 reservations en ligne pour son nouveau modele.
-        </p>
-        <p>
-          <a class="archi" href="img/zboatcrop.jpg"
+        <h3 class="article2-secondary-title">
+          Une importante rentabilisation.
+        </h3>
+        <div class="article2-wrapper">
+            <p>
+              Le marché du bateau prend un nouveau tournant : l’Arch-e-mede devient
+              un produit phare de Tesla. Effectivement, le voyage est sans
+              limite. Ce dispositif rentabilise considérablement l'investissement,
+              plus particulièrement les entreprises telles que Click & Boat. Cette
+              plateforme, qui permet de mettre en location son bateau, devient de
+              plus en plus florissante. L’initiative Arch-e-mede ouvre une
+              importante rentabilisation, les prix sont élevés, certes, mais le
+              milieu économique et touristique profite de cette avancée
+              fulgurante. Par ailleurs, l’auto-pilotage des bateaux œuvre à des
+              projets futurs, comme le service taxi-boat dans lequel Tesla mène un
+              partenariat novateur.
+              Selon les spécialistes, le chiffre d’affaire de Tesla augmenterait de
+              plus de 20 %. Elon Musk annonce que la marque a déja reçu près de
+              200.000 reservations en ligne pour son nouveau modele.
+            </p>
+          <a  href="img/zboatcrop.jpg"
             ><img
-              src="img/boat-crop-mini.jpg"
-              alt="Le futur du bateau électrique"
-              title="Cliquez pour agrandir"
+            class="article2-image-content" 
+            src="img/boat-crop-mini.jpg"
+            alt="Le futur du bateau électrique"
+            title="Cliquez pour agrandir"
           /></a>
-        </p>
-        <h3>Les Chiffres parlent d'eux-mêmes</h3>
-        <p>
-          17% ont pris la version à $98.990
-        </p>
-        <p>
-          41% ont pris la version à $102.220
-        </p>
-        <p>
-          42% ont pris la version à $299.999
-        </p>
-        <h3>Une nouvelle-ère</h3>
-
+        </div>
+        <h3 class="article2-secondary-title ">
+          Les Chiffres parlent d'eux-mêmes
+        </h3>
+        <ul>
+          <li>17% ont pris la version à $98.990</li>
+          <li>41% ont pris la version à $102.220</li>
+          <li>42% ont pris la version à $299.999</li>
+        <ul>
+        <h3 class="article2-secondary-title ">
+          Une nouvelle-ère
+        </h3>
         <p>
           La révolution commence au moment où le service "taxi-boat" est mis en
           place. Cette innovation chamboule toute la société.
         </p>
-        <p class="auteurs">Par Edith Uber & Max Click</p>
-      </section>
+        <p class="article2-auteur">
+          Par Edith Uber & Max Click
+        </p>
+      </div>
 
-      <!--Fil Twitter-->
-      <aside>
-        <a class="twitter-timeline" href="https://twitter.com/chaimisan99"
-          >Tweets by chaimisan99</a
-        >
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-        <a
-          href="https://twitter.com/intent/tweet?button_hashtag=archemede&ref_src=twsrc%5Etfw"
-          class="twitter-hashtag-button"
-          data-show-count="false"
-          >Tweet #archemede</a
-        >
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-      </aside>
-    </article>
+      <div class="article2-twitter">
+          <aside>
+            <a class="twitter-timeline" href="https://twitter.com/chaimisan99"
+              >Tweets by chaimisan99</a
+            >
+            <script
+              async
+              src="https://platform.twitter.com/widgets.js"
+              charset="utf-8"
+            ></script>
+            <a
+              href="https://twitter.com/intent/tweet?button_hashtag=archemede&ref_src=twsrc%5Etfw"
+              class="twitter-hashtag-button"
+              data-show-count="false"
+              >Tweet #archemede</a
+            >
+            <script
+              async
+              src="https://platform.twitter.com/widgets.js"
+              charset="utf-8"
+            ></script>
+          </aside>
+      </div>
+    </section>
   </body>
 </html>
