ajout class article 1 html

--- a/article1.html
+++ b/article1.html
@@ -156,14 +156,14 @@
           faveur de l’électrification des navires à quai dans les ports de
           Marseille, Toulon et Nice.
         </p>
-        <p>
+        <div class="div-cargo">
           <a class="cargoSolaire" href="img/cargoTesla.jpg"
             ><img
               src="img/cargoTeslaMini.jpg"
               alt="Cargo du futur"
               title="Cliquez pour agrandir"
           /></a>
-        </p>
+        </div>
         <p class="conclusion">
           La véritable révolution viendra quand nous pourront créer des cargos
           auto-suffisants qui pourront recharger leurs batteries au cours de la
