changement noms News dans menu + essai new logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   </head>
   <body>
     <header id="up">
-      <img class="logo-arch" alt="logo-arch-e-mede" src="img/logo-arch.jpg" />
+      <img
+        class="logo-arch"
+        alt="logo-arch-e-mede"
+        src="img/LogoArchiBlack2.png"
+      />
       <a class="buy-button" href="#order"><span>ORDER NOW</span></a>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
@@ -36,7 +40,7 @@
               <a class="lien-menu" href="#order">Commandez</a>
             </li>
             <li class="menu-items">
-              <a class="lien-menu" href="#">Actualités</a>
+              <a class="lien-menu" href="#">News</a>
             </li>
           </ul>
           <div id="open-menu" class="open-menu open-close">
